inicio do banco de dados
